--- a/src/index.html
+++ b/src/index.html
@@ -4,8 +4,16 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>webpack 学习</title>
+  <style>
+    body{
+      background-color: pink;
+    }
+  </style>
 </head>
 <body>
   <!-- 模版 -->
+  <div>
+    hello world
+  </div>
 </body>
 </html>
